# ESP32p4-EIP

./: .gitignore  CMakeLists.txt  LWIP_MODIFICATIONS.md  README.md  ReadmeACD.md  VL53L1X_CONFIG_DETAILS.md  bootlog.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
FirmwareImages/: README.md
Roadmap/: ESP32-P4 OpENer Project Roadmap.md  ota-webui-plan.md
Testing/: Test1.md
components/bmi270/: CMakeLists.txt  README.md  bmi270.c
components/bno086/: CMakeLists.txt
components/hc165/: README.md  hc165.c
components/hc165/include/: hc165.h
components/hc595/: CMakeLists.txt
components/hc595/include/: hc595.h
components/hx711/: CMakeLists.txt  README.md  hx711.c
components/hx711/include/: hx711.h
components/lsm6dsv16x/: CMakeLists.txt
components/lsm6dsv16x/include/: lsm6dsv16x.h
components/mcp23008/: CMakeLists.txt  README.md  mcp23008.c
components/mcp23008/include/: mcp23008.h
components/mcp23017/: README.md  mcp23017.c
components/mcp23017/include/: mcp23017.h
components/mcp3008/: CMakeLists.txt  README.md
components/mcp3008/include/: mcp3008.h
components/mcp3208/: CMakeLists.txt  README.md  mcp3208.c
components/mcp3208/include/: mcp3208.h
components/mcp4725/: CMakeLists.txt  README.md
components/mcp4725/include/: mcp4725.h
components/modbus_tcp/src/: modbus_protocol.c  modbus_register_map.c  modbus_tcp.c
components/mp23008/: CMakeLists.txt  README.md  mp23008.c
components/mp23008/include/: mp23008.h
components/mp23017/: CMakeLists.txt  README.md  mp23017.c
components/mp23017/include/: mp23017.h
components/nau7802/: CMakeLists.txt
components/nau7802/include/: nau7802.h
components/opener/: CMakeLists.txt
components/ota_manager/include/: ota_manager.h
components/ota_manager/src/: ota_manager.c
components/pcf8575/: CMakeLists.txt  README.md
components/pcf8575/include/: pcf8575.h
components/system_config/: system_config.c
components/system_config/include/: system_config.h
components/tca9534/: CMakeLists.txt  README.md  tca9534.c
components/tca9534/include/: tca9534.h
components/tca9555/: README.md
components/unused/: README.md
components/unused/bno086/: README.md  bno086.c
components/vl53l0x/: CMakeLists.txt  README.md  vl53l0x.c
components/vl53l1x/: CMakeLists.txt  README.md  vl53l1x.c
components/vl53l1x_uld/: CMakeLists.txt  LICENSE  README.md  example.c  idf_component.yml
components/webui/: CMakeLists.txt  README.md
components/webui/include/: webui_api.h
components/webui/src/: webui.c  webui_api.c  webui_html.c
dep_mods/AI_Analysis_Of_Issue/: DHCP_VS_STATIC_IP_ACD_COMPARISON.md  LWIP_ACD_UPSTREAM_IMPROVEMENTS.md  LWIP_VERSION_COMPARISON.md
dep_mods/lwIP/: RFC5227_IMPLEMENTATION_GUIDE.md  acd.c  lwip-rfc5227-patch.patch
dependency_modifications/: ReadmeACD.md
dependency_modifications/Analysis_of_ACD_Issue/: ACD_INTERFACE_BRINGUP_ANALYSIS.md  RFC5227_COMPLIANCE_REQUIREMENTS.md
dependency_modifications/TI_LwIP_Implementation/: user_acd_lwip.c  user_acd_lwip.h  user_acd_ndk.c  user_acd_ndk.h
dependency_modifications/lwIP/: ACD_ARP_FRAME_STORAGE_ISSUE.md  RFC5227_IMPLEMENTATION_GUIDE.md  acd-static-ip-issue.md  lwip-rfc5227-patch-README.md
docs/: ACD_Complete_Documentation.md  BOOTLOG.md  EtherNetIP_Adapter_Protocol_Reference.md  EtherNetIP_Adapter_V3_Enhancements.md  EtherNetIP_Protocol_Reference.md  EtherNetIP_References.md  EthernetIP_devicetypes.md  MEMORY_LEAKS_AND_RACE_CONDITIONS.md  OpENer_API_Programming_Guide.md  devicetypes.md  vl53l0x_README.md  vl53l0x_REGISTERS.md
eds/: ESP32P4_OPENER.eds
main/: CMakeLists.txt  Kconfig.projbuild  main.c
scripts/: copy_firmware.py
webui_preview/: README.md  index.html  inputassembly.html  ota.html  outputassembly.html  status.html  update_webui_previews.py
(+51 files in other folders)
